--- a/style.css
+++ b/style.css
@@ -124,12 +124,13 @@ body {
     position: absolute;
     right: 2.26rem;
     top: 0.3rem;
-    background: red;
+    background: #ff00008c;
     color: white;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     text-align: center;
     border-radius: 50%;
+    line-height: 20px;
 }
 
 
